@@ -1,6 +1,6 @@
 # Base de Datos
-# db_url=jdbc:mysql://data.appcar.com.ar:23849/integrity?zeroDateTimeBehavior=convertToNull
-db_url=jdbc:mysql://localhost/score?zeroDateTimeBehavior=convertToNull
+db_url=jdbc:mysql://data.appcar.com.ar:23849/score?zeroDateTimeBehavior=convertToNull
+# db_url=jdbc:mysql://localhost/score?zeroDateTimeBehavior=convertToNull
 db_class=com.mysql.jdbc.Driver
 db_usuario=snapcar
 db_password=oycobe
